# barks-ocr

./: .env  .gitignore  .justfile  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  barks_words.txt  batch_ocr.py  cspell-words.txt  cspell.config.yaml  justfile  make-ocr-groups.py  mywords.txt  ocr_example.py  ocr_supervision_example.py  pyproject.toml  requirements.txt  show-ocr.py  show_ocr.py  spelling.dic  ty.toml
books/: cspell-words-barks-books.txt  cspell-words.txt  cspell.json
books/Carl Barks Conversations/: chapters.toml  overrides.toml
books/Carl Barks Conversations/parse-dirs/cb-scan-1/: CB-Conversations-scan-1-rotated_manifest.json  CB-Conversations-scan-1-rotated_spread_001.json  CB-Conversations-scan-1-rotated_spread_001.md  CB-Conversations-scan-1-rotated_spread_002.json  CB-Conversations-scan-1-rotated_spread_002.md  CB-Conversations-scan-1-rotated_spread_003.json  CB-Conversations-scan-1-rotated_spread_003.md  CB-Conversations-scan-1-rotated_spread_004.json  CB-Conversations-scan-1-rotated_spread_004.md  CB-Conversations-scan-1-rotated_spread_005.json  CB-Conversations-scan-1-rotated_spread_005.md  (+54 more)
books/Carl Barks Conversations/parse-dirs/cb-scan-1-fix/: CB-Conversations-scan-1-fix-add-rotated_manifest.json  CB-Conversations-scan-1-fix-add-rotated_spread_001.json  CB-Conversations-scan-1-fix-add-rotated_spread_001.md
books/Carl Barks and the Art of the Comic Book/: chapters.toml  overrides.toml
books/Carl Barks and the Disney Comic Book/: chapters.toml
books/From Burbank to Calisota/: chapters.toml  overrides.toml
books/From Burbank to Calisota/excluded-pages/: Overstreet_07_99_Barks_text.json
books/src/: book_pages.py  change-to-curly-quotes.py  curly_quotes.py  llama-parse-build-epub.py  llama-parse-grammarcheck.py  llama-parse-images.py  llama-parse-pdf.py  llama-parse-spellcheck.py  loader.py  rename-andrae.py
experiments/: make-word-index-from-gemini-ai-groups.py  whoosh-test.py
experiments/tools/: fuzz_compare.py  ocr_supervision_example.py
ocr/non-ai/: batch-ocr.py  make-gemini-ai-groups.py  make-ocr-groups.py
ocr/tools/: ocr_supervision_example.py  show-ocr.py
ocr/utils/: gemini_ai.py  gemini_ai_comic_prompts.py  ocr_box.py
scraps/: .env  book-ocr-test.py  categorize-barks-words.py  damishshah_comic_book_reader.py  gemini-test.sh  image_reg.py  image_reg_optical_flow.py  main.py  nano-banana-color-comic-bak.py  paddleocr_example.py  speech_bubbles.py  start.sh  stop.sh  summer-1.html  summer-2-10.html  youtube_transcripts.py
scripts/: fix-common-prelim-json-errors.sh  git-cspell.sh
src/: annotate-ocr.py  batch-ocr.py  book-ocr-2-columns.py  book-ocr-test-3.py  categorize-barks-words.py  censorship-fixes-great-tables.py  check-processed-gemini-ai-groups.py  clean-whoosh-index-stemmed-terms.py  compare_ocr_text.py  fix-common-prelim-json-errors.sh  fix-ocr.py  gemini-ai-groups-prelim-json-string-replacer.py  gemini_ai_ocr_grouper.py  image_reg.py  kivy-prelim-ocr-editor.py  kivy_editor.py  kivy_prelim_ocr_editor.py  list-gemini-models.py  list_models.py  log-config.yaml  make-final-gemini-ai-groups.py  make-gemini-ai-groups-batch-job.py  make-gemini-ai-groups-batch-results.py  make-gemini-ai-groups-from-batch.py  make-gemini-ai-groups-get-batch-results.py  make-gemini-ai-groups.py  make-ocr-groups.py  make-whoosh-index-from-gemini-ai-groups.py  nano-banana-batch-results.py  nano-banana-batch.py  nano-banana-color-comic.py  nano-banana-panels-ai.py  nano-banana-panels-to-ai.py  nano-banana-test-2.py  nano-banana-test.py  ner_example.py  ocr_file_paths.py  ocr_json_files.py  open-prelim-ocr.py  quick-good-deeds-text-box-fix.py  (+3 more)
src/barks_ocr/: __init__.py  cli_setup.py  log_setup.py
src/barks_ocr/nano/: __init__.py  nano_banana_panels.py  nano_banana_test.py
src/barks_ocr/pipeline/: __init__.py  batch_ocr.py  entity_store.py  entity_tagger.py  final_groups.py  gemini_batch_job.py  gemini_batch_results.py  gemini_grouper.py  gemini_groups.py  whoosh_index.py
src/barks_ocr/resources/: log-config.yaml
src/barks_ocr/tools/: __init__.py  annotate.py  censorship_table.py  compare.py  fix_ocr.py  florence_check.py  get_title_page.py  get_title_pages.py  kivy_editor.py  list_models.py  ocr_check.py  open_prelim.py  quick_fix.py  show_annotated.py  string_replacer.py  whoosh_find.py
src/barks_ocr/utils/: __init__.py  gemini_ai.py  gemini_ai_comic_prompts.py  gemini_ai_for_grouping.py  geometry.py  group_checks.py  ocr_box.py  preprocessing.py
src/tools/: count_tokens.py
src/utils/: common.py  gemini_ai.py  gemini_ai_comic_prompts.py  gemini_ai_for_grouping.py  geometry.py  ocr_box.py  paragraph_wrap.py  preprocessing.py
(+895 files in other folders)
