[project]
name = "barks-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "barks-fantagraphics",
    "comic-utils",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "google-genai>=1.32.0",
    "google-generativeai>=0.8.5",
    "great-tables[extra]>=0.20.0",
    "intspan>=1.6.1",
    "kivy>=2.3.1",
    "loguru-config>=0.1.0",
    "nltk>=3.9.2",
    "opencv-python>=4.12.0.88",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.1",
    "pillow>=11.3.0",
    "polars>=1.35.2",
    "pycountry>=24.6.1",
    "pydantic>=2.11.7",
    "pyenchant>=3.3.0",
    "pyspellchecker>=0.8.4",
    "pyuca>=1.2",
    "selenium>=4.38.0",
    "simplemma>=1.1.2",
    "spacy>=3.8.11",
    "thefuzz>=0.22.1",
    "typer>=0.21.1",
    "whoosh-reloaded>=2.7.5",
]

[tool.uv.sources]
barks-fantagraphics = { path = "../barks-compleat-reader/src/barks-fantagraphics", editable = true }
comic-utils = { path = "../barks-compleat-reader/src/comic-utils", editable = true }

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[dependency-groups]
dev = [
    "pip>=26.0",
]
