[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/barks_ocr"]

[project]
name = "barks-ocr"
version = "0.1.0"
description = "Scripts for OCR processing of Fantagraphics Carl Barks comic pages."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "barks-fantagraphics",
    "comic-utils",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "google-genai>=1.32.0",
    "google-generativeai>=0.8.5",
    "great-tables[extra]>=0.20.0",
    "intspan>=1.6.1",
    "kivy>=2.3.1",
    "loguru-config>=0.1.0",
    "nltk>=3.9.2",
    "opencv-python>=4.12.0.88",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.1",
    "pillow>=11.3.0",
    "polars>=1.35.2",
    "pycountry>=24.6.1",
    "pydantic>=2.11.7",
    "pyenchant>=3.3.0",
    "pyspellchecker>=0.8.4",
    "pyuca>=1.2",
    "selenium>=4.38.0",
    "simplemma>=1.1.2",
    "spacy>=3.8.11",
    "thefuzz>=0.22.1",
    "typer>=0.21.1",
    "whoosh-reloaded>=2.7.5",
]

[project.scripts]
barks-ocr-batch                = "barks_ocr.pipeline.batch_ocr:app"
barks-ocr-gemini-batch-job     = "barks_ocr.pipeline.gemini_batch_job:app"
barks-ocr-gemini-batch-results = "barks_ocr.pipeline.gemini_batch_results:app"
barks-ocr-gemini-groups        = "barks_ocr.pipeline.gemini_groups:app"
barks-ocr-final-groups         = "barks_ocr.pipeline.final_groups:app"
barks-ocr-whoosh-index         = "barks_ocr.pipeline.whoosh_index:app"
barks-ocr-annotate             = "barks_ocr.tools.annotate:app"
barks-ocr-fix                  = "barks_ocr.tools.fix_ocr:app"
barks-ocr-kivy-editor          = "barks_ocr.tools.kivy_editor:app"
barks-ocr-open-prelim          = "barks_ocr.tools.open_prelim:app"
barks-ocr-show-annotated       = "barks_ocr.tools.show_annotated:app"
barks-ocr-compare              = "barks_ocr.tools.compare:app"
barks-ocr-quick-fix            = "barks_ocr.tools.quick_fix:main"
barks-ocr-string-replacer      = "barks_ocr.tools.string_replacer:app"
barks-ocr-censorship-table     = "barks_ocr.tools.censorship_table:main"
barks-ocr-list-models          = "barks_ocr.tools.list_models:main"
barks-ocr-nano-test            = "barks_ocr.nano.nano_banana_test:main"
barks-ocr-nano-panels          = "barks_ocr.nano.nano_banana_panels:main"

[tool.uv.sources]
barks-fantagraphics = { path = "../barks-compleat-reader/src/barks-fantagraphics", editable = true }
comic-utils = { path = "../barks-compleat-reader/src/comic-utils", editable = true }

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[dependency-groups]
dev = [
    "pip>=26.0",
    "ruff>=0.12.7",
    "ty>=0.0.17",
]
